# ontology

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.github/workflows/: daily.yml  deploy.yml
dashboard/: package-lock.json  package.json
mcp-server/: pyproject.toml
mcp-server/src/onto_mcp/: server.py
pipeline/: pyproject.toml
pipeline/src/ontoquant/: cli.py  config.py  quality.py  run_daily.py  seed.py
pipeline/src/ontoquant/compute/: factor_model.py  returns.py  risk.py
pipeline/src/ontoquant/core/: action_functions.py  actions.py  audit.py  object_set.py  schema.py  store.py
pipeline/src/ontoquant/events/: backfill.py  classify.py  embed.py  process.py  sentiment.py  severity.py
pipeline/src/ontoquant/export/: artifacts.py
pipeline/src/ontoquant/ingest/: company.py  corp_map.py  dart.py  dart_ownership.py  edgar.py  fred.py  fundamentals.py  http.py  kenfrench.py  news_kr.py  press_rss.py  prices_kr.py  prices_us.py  rss.py  tsio.py
pipeline/src/ontoquant/insights/: event_rules.py  event_study.py  rules.py  sector_rules.py  signal_rules.py
pipeline/src/ontoquant/modeling/: deflated_sharpe.py  objective.py
pipeline/src/ontoquant/propagation/: impact.py
pipeline/src/ontoquant/proposals/: backtest.py  outcomes.py  rebalance.py
pipeline/src/ontoquant/scenario/: sandbox.py
pipeline/src/ontoquant/signals/: alphas.py  audit.py  audit_v2.py  combine.py  engine.py  meta.py  sue.py
pipeline/tests/: test_actions.py  test_alphas.py  test_event_study.py  test_leakage.py  test_schema.py  test_store.py  test_user_scenarios.py
scripts/: codegen_ts.py
(+243 files in other folders)
