[project]
name = "onto-mcp"
version = "0.1.0"
description = "OntoQuant ontology MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "ontoquant",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
