[project]
name = "ontoquant"
version = "0.1.0"
description = "Ontology-driven quant portfolio risk engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "requests>=2.31",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=3.0"]
backtest = ["vectorbt>=0.28"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
